# zrive-ds

./: .cache.sqlite  .gitignore  pyproject.toml
models/: push_2025_10_27.pkl
src/: utils.py
src/module_1/: module_1_meteo_api.py
src/module_2/: module_2_eda.ipynb  module_2_eda.md
src/module_3/: best_logistic_regression_model.pkl  data_loading.py  module_3_push_notif.ipynb  module_3_push_notif.md  preprocessing.py  train_model.py
src/module_3/models/: best_logistic_regression_model_20251021_203229.pkl
src/module_4/: fit.py  module_4_push_notif.ipynb  module_4_push_notif.md  module_4_push_notif_No_SMOTE.ipynb  module_4_push_notif_No_SMOTE.md  predict.py
src/module_5/: module5.ipynb
tests/module_1/: test_meteo_api.py
tests/module_3/: test_data_loading.py  test_module_3_push_notif.py  test_preprocessing.py  test_train_model.py
tests/module_4/: test_fit.py  test_predict.py
