[tool.poetry]
name = "zrive-ds"
version = "0.1.0"
description = "Project for the program Zrive Applied Data Science"
authors = ["Guille Barquero <gb@zriveapp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
numpy = "^1.25.2"
requests = "^2.31.0"
scikit-learn = "^1.4.1.post1"
openmeteo-requests = "^1.7.2"
requests-cache = "^1.2.1"
retry-requests = "^2.0.0"
boto3 = "^1.40.44"
load-dotenv = "^0.1.0"
pyarrow = "^21.0.0"
fastparquet = "^2024.11.0"
seaborn = "^0.13.2"
nbconvert = "^7.16.6"
jupyter = "^1.1.1"
pytest = "^8.4.2"
imblearn = "^0.0"
urllib3 = "^2.5.0"


[tool.poetry.group.dev.dependencies]
isort = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]
